--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
                 <configuration>
                     <descriptors>
                         <descriptor>src/assembly/distribution-unix.xml</descriptor>
+                        <descriptor>src/assembly/distribution-windows.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
